<resources>
    <string name="app_name">JRSL.</string>
    <string name="btnLogin">Login</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="signUp">SIGN UP</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenterpassword">Re-enter Password</string>
    <string name="address">ADDRESS</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="destination">Destination/Region</string>
    <string name="addressline1">Address Line 1</string>
    <string name="addressline2">Address Line 2</string>
    <string name="postalcode">Postal Code</string>
    <string name="city">City</string>
    <string name="discount">DISCOUNT</string>
    <string name="payment">PAYMENT</string>
    <string name="orderHistory">Order History</string>
    <!--    <string name="orderHistoryDetails">-->
    <!--        Order Date: \n        10/10/22\n-->
    <!--        Order Reference : \n        D371HS\n-->
    <!--        Status :\n        Delivered\n\n-->
    <!--    </string>-->
    <string name="orderDate">
        Order Date:
    </string>
    <string name="orderReference">
        Order Reference:
    </string>
    <string name="totalPrice">
        Total Price:
    </string>
    <string name="status">
        Status:
    </string>
    <string name="orderProductTitle">
        Soleil Collection
    </string>
    <!--    <string name="orderProductDetails">-->
    <!--        Jumpsuit\n\n-->
    <!--         Size :  M-->
    <!--         Quantity : 1\n-->

    <!--         $62-->
    <!--    </string>-->
    <string name="addressDetails">\t\t \t
        \t\t
        \t
        120042\t
        Singapore\t
        Singapore
    </string>
    <string name="orderPlacedMsgTitle">Order Placed</string>
    <string name="orderPlacedCourier">Instant Fairy Delivery Services</string>
    <string name="orderPlacedMsg">Ding Dong! You will receive your order now!</string>
    <string name="orderPlacedDetails">
 <b>Order Reference:</b>
 D371HS\n
 <b>Order Date:</b>
 10/10/22\n
 <b>Delivery Address:</b>
 Blk 18 Sarrow Street
 #14-203
 120042
 Singapore
 Singapore\n

 <b>Summary:</b>
 Discount \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t <b>$0.00</b>
 Subtotal \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t <b>$65.00</b>
 Shipping \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t    <b>$20.00</b>
    </string>

    <string name="orderPlacedTotal">
 <b>Total</b> \t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t    <b>$85.00</b>

    </string>

    <!--    <string name="Saved1Brand">-->
    <!-- <b>Kiera's Collection</b>-->
    <!--    </string>-->

    <string name="Saved1Desc">
 Cargo Pants
    </string>

    <string name="Saved1Price">
 $20
    </string>


    <!--    <string name="Saved2Brand">-->
    <!-- <b>Sollice's Collection</b>-->
    <!--    </string>-->

    <string name="Saved2Desc">
 Jumpsuit
    </string>

    <string name="Saved2Price">
 $62
    </string>

    <!--    <string name="Saved3Brand">-->
    <!-- <b>Darcy Collection</b>-->
    <!--    </string>-->

    <string name="Saved3Desc">
 White Dress
    </string>

    <string name="Saved3Price">
 $25
    </string>

    <string name="Saved4Brand">
 <b>Cancy Collection</b>
    </string>

    <string name="Saved4Desc">
 Brown Coat
    </string>

    <string name="Saved4Price">
 $40
    </string>
    <string name="CollectionType">
 New Collection
    </string>

    <string name="Cart1Brand">
 <b>Darcy Collection</b>
    </string>

    <string name="Cart1Desc">
 White Dress
    </string>

    <string name="Cart1Price">
 $25
    </string>

    <string name="Cart1Size">
 M
    </string>

    <string name="Cart1Qty">
 Qty 1
    </string>

    <!--    <string name="Cart2Brand">-->
    <!-- <b>Cancy Collection</b>-->
    <!--    </string>-->

    <string name="Cart2Desc">
 Brown Coat
    </string>

    <string name="Cart2Price">
 $40
    </string>

    <string name="Cart2Size">
 M
    </string>

    <string name="Cart2Qty">
 Qty 1
    </string>

</resources>