<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Receipt">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_editor_absoluteX="1dp"
        app:layout_editor_absoluteY="1dp"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="361dp"
            android:layout_height="44dp"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="@string/orderPlacedMsgTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textViewCourier"
            android:layout_width="361dp"
            android:layout_height="25dp"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="@string/orderPlacedCourier"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textViewMsg"
            android:layout_width="361dp"
            android:layout_height="41dp"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="@string/orderPlacedMsg"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000"
            android:textSize="15sp" />
        <View
            android:layout_width="370dp"
            android:layout_height="3dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:background="#FFDDDDDD" />

        <TextView
            android:id="@+id/textViewDetails"
            android:layout_width="match_parent"
            android:layout_height="364dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="@string/orderPlacedDetails"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000"
            android:textSize="15sp" />
        <View
            android:layout_width="370dp"
            android:layout_height="3dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:background="#FFDDDDDD" />

        <TextView
            android:id="@+id/textViewTotal"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:fontFamily="@font/alegreya_sans_medium"
            android:text="@string/orderPlacedTotal"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000"
            android:textSize="15sp" />
        <View
            android:layout_width="370dp"
            android:layout_height="3dp"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="15dp"
            android:background="#FFDDDDDD" />
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:onClick="onClick"
            android:text="Back to Home"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/mygreybutton"
            android:fontFamily="@font/alegreya_sans_bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>